tests/golden/type_errors/map_bad_assignment.cd
let values: map<string, number> = {"one": 1};
values["two"] = "not a number";
