tests/golden/type_errors/map_bad_assignment.err
Type error at 2:7: map value is incompatible with map value type
  values["two"] = "not a number";
        ^
